--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ https://www.alamogordonews.com/story/news/education/2016/05/28/alamogordo-high-s
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Legacy</div>
         <img src="pics/legacy.png" alt="House" style="width:100%">
-        <p>Recently, we ran across a Tumbler post about the idea of adopting elderly people who have no close family members to take care of them. Legacy is a mobile app that matches youth with senior citizens in elderly homes based on common goals, interests and location.
+        <p>Recently, we ran across a Tumblr post about the idea of adopting elderly people who have no close family members to take care of them. Legacy is a mobile app that matches youth with senior citizens in elderly homes based on common goals, interests and location.
         </p>
         <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Try it out</h3>
         <a href="https://devpost.com/software/legacy"><span class="w3-tag w3-light-grey">Devpost</span></a>
@@ -126,7 +126,7 @@ https://www.alamogordonews.com/story/news/education/2016/05/28/alamogordo-high-s
           <div class="w3-display-container">
             <div class="w3-display-topleft w3-black w3-padding">JohnCon Montage</div>
             <img src="pics/johncon.png" alt="House" style="width:100%">
-            <p>I am a huge of John Conway and love making art with math. This code transforms PNGs onto a John Conway Game of Life board. The board and other files were made with Turtle graphics for Tk in Python.
+            <p>I am a huge fan of John Conway and love making art with math. This code transforms PNGs onto a John Conway Game of Life board. The board and other files were made with Turtle graphics for Tk in Python.
             </p>
             <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Try it out</h3>
             <a href="https://devpost.com/software/hophacks2017-johncon"><span class="w3-tag w3-light-grey">Devpost</span></a>
